# xmllayout

./: .gitignore  MANIFEST.in  README.rst  setup.cfg  setup.py
xmllayout/: __init__.py  formatters.py
xmllayout/tests/: test_formatters.py
