[metadata]
name = XMLLayout
version = 1.2.0
description = Formats Python log messages as log4j XMLLayout XML
long_description = file: README.rst
keywords = logging, log4j
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: Jython
    Topic :: System :: Logging
author = Philip Jenvey
author_email = pjenvey@underboss.org
maintainer = Anselm Kruis
maintainer_email = anselm.kruis@atos.net
url = https://github.com/akruis/xmllayout
license = BSD

[options]
zip_safe = True
include_package_data = False
packages = xmllayout
tests_require = six
test_suite = xmllayout.tests

[bdist_wheel]
universal = 0
